Fix issue for transform-origin in SVG https://bugs.webkit.org/show_bug.cgi?id=232189

Patch by Nikolaos Mouchtaris <nmouchtaris@apple.com> on 2021-10-25
Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/svg/styling/render/transform-origin-not-explicit-style-ref.svg: Added.
* web-platform-tests/svg/styling/render/transform-origin-not-explicit-style.svg: Added.

Source/WebCore:

Add temp fix to use previously ignored transform-origin in SVGGraphicsElement::animatedLocalTransform
if not explicitly set in style. Proper fix to come: https://bugs.webkit.org/show_bug.cgi?id=232128.

Tests: imported/w3c/web-platform-tests/svg/styling/render/transform-origin-not-explicit-style-ref.svg
       imported/w3c/web-platform-tests/svg/styling/render/transform-origin-not-explicit-style.svg

* svg/SVGGraphicsElement.cpp:
(WebCore::SVGGraphicsElement::animatedLocalTransform const):

Canonical link: https://commits.webkit.org/243530@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284853 268f45cc-cd09-0410-ab3c-d52691b4dbfc